<resources>
    <string name="app_name">Tap Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_server_client">416184738768-s9olrqsd0pqgr1t3gfb21slig6qio1pt.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="sending_the_message">Sending the message</string>
    <string name="send_message">Send message</string>
    <string name="name_of_the_user">name of the user</string>
    <string name="email_of_the_user">email of the user</string>
    <string name="status_of_the_user">status of the user</string>
    <string name="recieve_message">Recieve message</string>
    <string name="create_new_account">Create new account.</string>
    <string name="username">username</string>
    <string name="sign_up">Sign up</string>
    <string name="imageBackground">ImageBackground</string>
    <string name="imageAdd">ImageAdd</string>
    <string name="name">Name:</string>
    <string name="enter_name">enter name</string>
    <string name="emailProfile">Email:</string>
    <string name="enter_email">enter email</string>
    <string name="status">Status:</string>
    <string name="enter_status">enter status</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_back_please_enter_your_details">Welcome back! Please enter your details.</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">forgot password?</string>
    <string name="check_contacts">Check Contacts</string>
    <string name="welcome_to">Welcome to</string>
    <string name="tap_go">Tap Go</string>
    <string name="add_friend">add friend</string>
</resources>