<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="145dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="35dp"
    android:paddingBottom="5dp"
    app:cardBackgroundColor="@color/black"
    android:layout_margin="5dp"
    android:id="@+id/userContent"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contacts_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:civ_border_width="2dp"
        android:src="@mipmap/programmer"
        app:civ_border_color="#FF000000"
        app:civ_circle_background_color="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="130dp">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_user"
            android:textSize="16sp"
            android:padding="3dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_of_the_user"
            android:textSize="16sp"
            android:padding="3dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/contact_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_of_the_user"
            android:textSize="16sp"
            android:padding="3dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textColor="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_friend"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonbg"
            android:backgroundTint="#2962ff"
            android:text="@string/add_friend"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.cardview.widget.CardView>