<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    android:orientation="vertical"
    tools:context=".Fragments.Profile">

    <LinearLayout
        android:id="@+id/img_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@drawable/profile_bg_img"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/imageBackground" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="156dp"
            android:layout_height="206dp"
            android:layout_gravity="center"
            android:layout_marginTop="-340dp"
            android:src="@mipmap/programmer"
            app:civ_border_color="#FF000000"
            app:civ_border_width="5dp"
            app:civ_circle_background_color="@color/black" />

        <ImageView
            android:id="@+id/profile_img_add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="54dp"
            android:layout_marginTop="-45dp"
            android:contentDescription="@string/imageAdd"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_camera"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/profile_userName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradientbg2"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_person"
                app:drawableTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_name_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_name"
                android:textColorHint="#344F4F"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="#FF0000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_text_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="5dp"
                android:text="@string/emailProfile"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_email"
                app:drawableTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_email_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:textColorHint="#344F4F"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="#FF0000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_text_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/layout_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_status_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_status"
                android:textColorHint="#344F4F"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="#FF0000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_text_status_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#2962ff"
                android:hapticFeedbackEnabled="true"
                android:text="@string/update"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="@color/white"
                android:hapticFeedbackEnabled="true"
                android:text="@string/save"
                android:textColor="@color/black"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>